--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^3.0.3",
     "ioredis": "^4.27.10",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
